# datahub-sap-hana

./: .env  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yaml  column_lineage_schema.py  console_recipe.yaml  docker-compose.yaml  filesource_recipe.yaml  hana_filesource.yaml  hana_recipe.yaml  notes.md  pyproject.toml  recipe.yaml  requirements.txt  sap_hana_results.json  schema.py  sink_results.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml  pr-titles.yaml  release-please.yaml  release.yaml
datahub_sap_hana/: column_lineage_schema.py  console_recipe.yaml  hana_recipe.yaml  ingestion.py  inspector.py  recipe.yaml
datahub_sap_hana/col_lineage/: schema.py  sqlglot_test.py
examples/: hana_compose.yaml  hana_recipe.yaml
integration_tests/: docker-compose.yml  hana_to_file.yml  test_hana.py  test_notes.md
integration_tests/post_start/: import_sql.sh
integration_tests/test_helpers/: click_helpers.py  mce_helpers.py
tests/: README.md  conftest.py  docker-compose.yml
tests/integration/: test_hana.py  test_lineage.py
tests/integration/data/: hana_mces_golden.json  hana_mces_golden_lineage_disabled.json  hana_mces_golden_with_lineage.json  hana_to_file.yml  hana_to_file_default.yml  hana_to_file_lineage_disabled.yml
tests/integration/hana/: docker-compose.yml  hana_mces_golden.json  hana_to_file.yml  test_hana_ingestion.py
tests/integration/testdata/: test_cross_schema.sql
tests/post_start/: import_sql.sh
tests/setup/: setup.sql
tests/test_helpers/: README.md  click_helpers.py  fs_helpers.py  mce_helpers.py  type_helpers.py
tests/unit/: test_config.py
