[tool.poetry]
name = "datahub-sap-hana"
version = "0.2.3"
description = "Linkedin DataHub ingestion source for SAP Hana"
authors = ["Contiamo <developers@contiamo.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
SQLAlchemy = "1.3.24"
acryl-datahub = {extras = ["sqlalchemy"], version = "^0.8.23"}
sqlalchemy-hana = "^0.5.0"
pyhdb = {version = "^0.3.4", optional = true}
hdbcli = "^2.11.14"
scipy = "^1.7.3"

[tool.poetry.extras]
pyhdb = ["pyhdb"]

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.931"
pytest = "^6.2.5"
flake8 = "^4.0.1"
ipython = "^8.0.0"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "integration: marks tests to only run in integration (deselect with '-m \"not integration\"')"
]
testpaths = [
    "tests/unit",
    "tests/integration",
]

[tool.mypy]
plugins = [
    "sqlmypy",
    "pydantic.mypy"
]
exclude = "^(venv|build|dist)/"
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_unused_configs = true
disallow_untyped_defs = false