[tool.poetry]
name = "datahub-sap-hana"
version = "0.3.0"
description = "Linkedin DataHub ingestion source for SAP Hana"
authors = ["Contiamo <developers@contiamo.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
acryl-datahub = {extras = ["sqlalchemy"], version = "^0.10.5.1"}
sqlalchemy-hana = "^0.5.0"
pyhdb = {version = "^0.3.4", optional = true}
hdbcli = "^2.17.21"
deepdiff = "^6.3.1"
sqlglot = "^17.3.0"
pytest = "^7.4.0"
pyserde = "^0.11.1"

[tool.poetry.extras]
pyhdb = ["pyhdb"]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pyright = "^1.1.315"
pytest = "^7.3.1"
ruff = "^0.0.277"
sqlalchemy-stubs = "^0.4"
unimport = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
    "tests/integration"

]

markers = [
    "integration: marks test as integration tests (select with '-m integration')",
    "db: marks a test as requireing a database (select with '-m db')",
]

# see https://microsoft.github.io/pyright/#/configuration?id=pyright-configuration
[tool.pyright]
include = ["datahub_sap_hana", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__"
]
reportMissingImports = true
typeCheckingMode = "basic"


[tool.ruff]
# See https://beta.ruff.rs/docs/configuration/
select = ["E", "F", "I001"]


[tool.ruff.per-file-ignores]
"tests/test_helpers/mce_helpers.py" = ["E501"]
"tests/test_helpers/type_helpers.py" = ["E501"]

[tool.unimport]
sources = ["datahub_sap_hana", "tests"]
exclude = '__init__.py|.venv/'
